# jira-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
jira_mcp/: __init__.py  __main__.py  cli.py  config.py  server.py
jira_mcp/client/: __init__.py  jira_client.py
jira_mcp/tools/: __init__.py  attachments.py  boards.py  comments.py  epics.py  fields.py  issues.py  links.py  projects.py  sprints.py  transitions.py  users.py  versions.py  worklogs.py
jira_mcp/utils/: __init__.py  auth.py  logging.py
tests/: __init__.py  conftest.py
tests/test_tools/: __init__.py
